[package]
name = "stemflow"
version = "0.5.3"
authors = ["Mickaël Salaün <mic@digikod.net>"]
description = "Access-control policy engine used by StemJail"
repository = "https://github.com/stemjail/stemflow"
readme = "README.md"
keywords = ["security", "ACL"]
license = "LGPL-3.0"
exclude = [".gitignore"]

[dependencies]
dot = "0.1"
